--- a/package.json
+++ b/package.json
@@ -1,24 +1,100 @@
 {
-  "name": "nextjs-bp",
+  "name": "t3-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "check": "npm run eslint:check && npm run prettier:check",
+    "prepare": "husky install",
+    "precommit": "lint-staged",
+    "prettier:check": "prettier --check \"src/**/*.{ts,tsx}\"",
+    "prettier:fix": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "prettier:check:json": "prettier --check \"*.json\"",
+    "prettier:fix:json": "prettier --write \"*.json\"",
+    "stylelint:check": "stylelint \"src/**/*.{css,scss}\" --custom-syntax postcss-scss",
+    "stylelint:fix": "stylelint --fix \"src/**/*.scss\" --custom-syntax postcss-scss",
+    "eslint:check": "eslint ./src --ext \"src/**/*.{js,jsx,ts,tsx}\"",
+    "eslint:fix": "eslint ./src --fix \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^1.0.6",
+    "@hookform/error-message": "^2.0.0",
+    "@hookform/resolvers": "^2.9.7",
+    "@reduxjs/toolkit": "^1.8.5",
+    "@trpc/client": "^9.27.1",
+    "@trpc/next": "^9.27.1",
+    "@trpc/react": "^9.27.1",
+    "@trpc/server": "^9.27.1",
+    "cookies-next": "^2.1.1",
+    "jotai": "^1.8.0",
     "next": "12.2.5",
+    "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.2",
+    "react-hot-toast": "^2.3.0",
+    "react-query": "^3.39.2",
+    "react-redux": "^8.0.2",
+    "sass": "1.54.5",
+    "sharp": "^0.30.7",
+    "superjson": "^1.9.1",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
-    "@types/node": "18.7.14",
+    "@types/cookie": "^0.5.1",
+    "@types/node": "18.7.8",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
-    "eslint": "8.23.0",
+    "autoprefixer": "^10.4.8",
+    "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-no-floating-promise": "^1.0.2",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^8.0.1",
+    "lint-staged": "13.0.3",
+    "postcss": "^8.4.16",
+    "postcss-nested": "^5.0.6",
+    "postcss-scss": "^4.0.4",
+    "prettier": "2.6.2",
+    "stylelint": "14.8.4",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^28.0.0",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.8.2"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "eslint",
+      "prettier --check"
+    ],
+    "*src/*.json": [
+      "prettier --check"
+    ],
+    "*.html": [
+      "prettier --check"
+    ]
   }
 }
