--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "17.0.0",
+    "eslint-config-next": "12.2.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "^2.26.0",
@@ -64,8 +64,10 @@
     "husky": "^8.0.1",
     "lint-staged": "13.0.3",
     "postcss": "^8.4.16",
+    "postcss-import": "^14.1.0",
     "postcss-nested": "^5.0.6",
     "postcss-scss": "^4.0.4",
+    "precss": "^4.0.0",
     "prettier": "2.6.2",
     "stylelint": "14.8.4",
     "stylelint-config-prettier": "^9.0.3",
